Added --slotcard-num setting to insert a Z88 card in a numbered slot (1, 2 or 3)
Added ZRCP command mmc-reload to reload MMC image
Added speech scripts to realtime translation from one language to another of a text adventure game


Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list
Improved Audio to .mid exporter: allow changing instrument
Improved Text Aventure Debugging: 
-Improved detection of Daad aventures
-Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)

Improved Next emulation:
-Turbo setting: make it by default limited on NextZXOS
-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
-Added a splash message when changing Layer 2 modes

Improved Debugging: 
-Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
-Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
-Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
-Allow to define up to 100 breakpoints from menu
-Preserve step mode when assembling
-Added command line setting to load source code

Improved ZX Vision menu interface:
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size